--- a/README.rdoc
+++ b/README.rdoc
@@ -60,17 +60,17 @@ When make use cases?
       + - refresh that was learned about authentication and authorization
       +   How it works? hmm?
 
-  5 Create Group.
-     a) adding scaffold
++ 5 Create Group.
+  +  a) adding scaffold
 
      b) add validation 
-         - database  validation
+      +  - database  validation
          - model validation
          - form validation errors through simple_form gem
          - refactor flash messages in volunteer_controller
 
 
-    6 Associate between group and volunteer
++ 6 Associate between group and volunteer
     7 add address model
     8 associate addres  model  with user and volunter
     9 Validation for uniqueness 
